Upgrade testcontainers and related dependencies to version 2.x (#218)